--- a/pkg/KubeArmorOperator/config/crd/bases/operator.kubearmor.com_kubearmorconfigs.yaml
+++ b/pkg/KubeArmorOperator/config/crd/bases/operator.kubearmor.com_kubearmorconfigs.yaml
@@ -74,6 +74,8 @@ spec:
                 type: boolean
               controllerPort:
                 type: integer
+              matchArgs:
+                type: boolean
               defaultCapabilitiesPosture:
                 enum:
                 - audit
