--- a/deployments/helm/KubeArmor/templates/configmap.yaml
+++ b/deployments/helm/KubeArmor/templates/configmap.yaml
@@ -7,6 +7,7 @@ data:
   alertThrottling: {{ .Values.kubearmorConfigMap.alertThrottling | quote }}
   maxAlertPerSec: {{ .Values.kubearmorConfigMap.maxAlertPerSec | quote }}
   throttleSec: {{ .Values.kubearmorConfigMap.throttleSec | quote }}
+  matchArgs: {{ .Values.kubearmorConfigMap.matchArgs | quote }}
 kind: ConfigMap
 metadata:
   labels:
