--- a/deployments/helm/KubeArmor/templates/crds/ksp.yaml
+++ b/deployments/helm/KubeArmor/templates/crds/ksp.yaml
@@ -87,6 +87,7 @@ spec:
                               path:
                                 pattern: ^\/+.*[^\/]$
                                 type: string
+                                maxLength: 200
                             type: object
                           type: array
                         message:
@@ -140,6 +141,7 @@ spec:
                               path:
                                 pattern: ^\/+.*[^\/]$
                                 type: string
+                                maxLength: 200
                             type: object
                           type: array
                         message:
@@ -186,6 +188,7 @@ spec:
                         path:
                           pattern: ^\/+.*[^\/]$
                           type: string
+                          maxLength: 200
                         readOnly:
                           type: boolean
                         severity:
@@ -265,6 +268,7 @@ spec:
                               path:
                                 pattern: ^\/+.*[^\/]$
                                 type: string
+                                maxLength: 200
                             type: object
                           type: array
                         message:
@@ -328,12 +332,14 @@ spec:
                         dir:
                           pattern: ^\/$|^\/.*\/$
                           type: string
+                          maxLength: 200
                         fromSource:
                           items:
                             properties:
                               path:
                                 pattern: ^\/+.*[^\/]$
                                 type: string
+                                maxLength: 200
                             type: object
                           type: array
                         message:
@@ -366,12 +372,14 @@ spec:
                         execname:
                           pattern: ^[^\/]+$
                           type: string
+                          maxLength: 200
                         fromSource:
                           items:
                             properties:
                               path:
                                 pattern: ^\/+.*[^\/]$
                                 type: string
+                                maxLength: 200
                             type: object
                           type: array
                         message:
@@ -381,6 +389,7 @@ spec:
                         path:
                           pattern: ^\/+.*[^\/]$
                           type: string
+                          maxLength: 200
                         severity:
                           maximum: 10
                           minimum: 1
@@ -471,6 +480,7 @@ spec:
                               path:
                                 pattern: ^\/+.*[^\/]$
                                 type: string
+                                maxLength: 200
                               recursive:
                                 type: boolean
                             type: object
@@ -478,6 +488,7 @@ spec:
                         path:
                           pattern: (^\/+.*[^\/]$)|(^\/$|^\/.*\/$)
                           type: string
+                          maxLength: 200
                         recursive:
                           type: boolean
                         syscall:
@@ -833,6 +844,7 @@ spec:
                               path:
                                 pattern: ^\/+.*[^\/]$
                                 type: string
+                                maxLength: 200
                               recursive:
                                 type: boolean
                             type: object
