--- a/deployments/helm/KubeArmorOperator/values.yaml
+++ b/deployments/helm/KubeArmorOperator/values.yaml
@@ -66,6 +66,7 @@ kubearmorConfig:
   alertThrottling: true
   maxAlertPerSec: 10
   throttleSec: 30
+  matchArgs: true
 
 # DO NOT CHANGE THIS VALUES 
 # changing these values will require code changes with the operator
