--- a/pkg/KubeArmorController/crd/KubeArmorPolicy.yaml
+++ b/pkg/KubeArmorController/crd/KubeArmorPolicy.yaml
@@ -87,6 +87,7 @@ spec:
                               path:
                                 pattern: ^\/+.*[^\/]$
                                 type: string
+                                maxLength: 200
                             type: object
                           type: array
                         message:
@@ -134,12 +135,14 @@ spec:
                         dir:
                           pattern: ^\/$|^\/.*\/$
                           type: string
+                          maxLength: 200
                         fromSource:
                           items:
                             properties:
                               path:
                                 pattern: ^\/+.*[^\/]$
                                 type: string
+                                maxLength: 200
                             type: object
                           type: array
                         message:
@@ -177,6 +180,7 @@ spec:
                               path:
                                 pattern: ^\/+.*[^\/]$
                                 type: string
+                                maxLength: 200
                             type: object
                           type: array
                         message:
@@ -186,6 +190,7 @@ spec:
                         path:
                           pattern: ^\/+.*[^\/]$
                           type: string
+                          maxLength: 200
                         readOnly:
                           type: boolean
                         severity:
@@ -265,6 +270,7 @@ spec:
                               path:
                                 pattern: ^\/+.*[^\/]$
                                 type: string
+                                maxLength: 200
                             type: object
                           type: array
                         message:
@@ -334,6 +340,7 @@ spec:
                               path:
                                 pattern: ^\/+.*[^\/]$
                                 type: string
+                                maxLength: 200
                             type: object
                           type: array
                         message:
@@ -366,12 +373,14 @@ spec:
                         execname:
                           pattern: ^[^\/]+$
                           type: string
+                          maxLength: 200
                         fromSource:
                           items:
                             properties:
                               path:
                                 pattern: ^\/+.*[^\/]$
                                 type: string
+                                maxLength: 200
                             type: object
                           type: array
                         message:
@@ -381,6 +390,7 @@ spec:
                         path:
                           pattern: ^\/+.*[^\/]$
                           type: string
+                          maxLength: 200
                         severity:
                           maximum: 10
                           minimum: 1
@@ -471,6 +481,7 @@ spec:
                               path:
                                 pattern: ^\/+.*[^\/]$
                                 type: string
+                                maxLength: 200
                               recursive:
                                 type: boolean
                             type: object
@@ -478,6 +489,7 @@ spec:
                         path:
                           pattern: (^\/+.*[^\/]$)|(^\/$|^\/.*\/$)
                           type: string
+                          maxLength: 200
                         recursive:
                           type: boolean
                         syscall:
@@ -833,6 +845,7 @@ spec:
                               path:
                                 pattern: ^\/+.*[^\/]$
                                 type: string
+                                maxLength: 200
                               recursive:
                                 type: boolean
                             type: object
