feat(helm): add configurable resources for KubeArmor DaemonSet container
Signed-off-by: Fernando Paz Silva Cavalcante <fpaz392@gmail.com>

--- a/deployments/helm/KubeArmor/templates/daemonset.yaml
+++ b/deployments/helm/KubeArmor/templates/daemonset.yaml
@@ -84,7 +84,10 @@ spec:
         {{- else }} # generic
           {{- toYaml .Values.kubearmor.volumeMountsGeneric | trim | nindent 10 }}
         {{- end }}
-
+        {{- with .Values.kubearmor.resources }}
+        resources:
+          {{- toYaml . | nindent 10 }}
+        {{- end }}
       dnsPolicy: ClusterFirstWithHostNet
       hostNetwork: true
       hostPID: true
