fix(chart): allow untrackedNs flag via Helm by exposing kubearmor.args
Signed-off-by: Keshav Kapoor <keshav.10919051722@std.ggsipu.ac.in>

--- a/deployments/helm/KubeArmor/values.yaml
+++ b/deployments/helm/KubeArmor/values.yaml
@@ -124,7 +124,8 @@ kubearmor:
   imagePullPolicy: Always
 
   # kubearmor daemonset arguments. See `kubearmor --help`
-  args: []
+  args:
+      - "--untrackedNs=kube-system,kubearmor"
 
   tls:
     tlsCertPath: /var/lib/kubearmor/tls
