add documentation for process args matching
Signed-off-by: Aryan-sharma11 <aryan1126.sharma@gmail.com>

--- a/deployments/helm/KubeArmor/templates/crds/ksp.yaml
+++ b/deployments/helm/KubeArmor/templates/crds/ksp.yaml
@@ -390,6 +390,11 @@ spec:
                           pattern: ^\/+.*[^\/]$
                           type: string
                           maxLength: 200
+                        allowedArgs: 
+                          items: 
+                            type: string
+                          type: array
+                          maxItems: 20
                         severity:
                           maximum: 10
                           minimum: 1
