--- a/deployments/helm/KubeArmor/templates/crds/hsp.yaml
+++ b/deployments/helm/KubeArmor/templates/crds/hsp.yaml
@@ -443,6 +443,11 @@ spec:
                           pattern: ^\/+.*[^\/]$
                           type: string
                           maxLength: 200
+                        allowedArgs: 
+                          items: 
+                            type: string
+                          type: array
+                          maxItems: 20
                         severity:
                           maximum: 10
                           minimum: 1
